--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "rand-token": "^1.0.1"
+    "morgan": "^1.10.0",
+    "rand-token": "^1.0.1",
+    "rotating-file-stream": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
